[package]
name = "stacker"
version = "0.1.0"
edition = "2024"

[dependencies]
addr2line = "0.24.2"
clap = { version = "4.5.42", features = ["derive"] }
gimli = "0.31.1"
nix = { version = "0.30.1", features = ["ptrace"] }
object = "0.36.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
